--- a/app/src/main/res/layout/activity_movie_detail.xml
+++ b/app/src/main/res/layout/activity_movie_detail.xml
@@ -1,117 +1,107 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+<merge xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
     tools:context="com.frusoft.movier.activity.MovieDetailActivity">
 
-    <LinearLayout
+    <ScrollView
+        android:id="@+id/ll_detail_wrapper"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="vertical">
+        android:visibility="invisible">
 
-        <FrameLayout
+
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="horizontal">
-
+            android:orientation="vertical">
 
             <ImageView
                 android:id="@+id/iv_details_preview_poster"
-                android:contentDescription="@string/card_poster_image_content_description"
                 android:layout_width="match_parent"
-                android:layout_height="176dp"
+                android:layout_height="172dp"
                 android:layout_gravity="center"
+                android:contentDescription="@string/card_poster_image_content_description"
                 android:scaleType="centerCrop" />
-
-
-            <TextView
-                android:id="@+id/tv_details_title"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_gravity="bottom"
-                android:paddingBottom="28dp"
-                android:paddingLeft="72dp"
-                android:paddingRight="16dp"
-                android:textColor="#fff"
-                android:textSize="32sp"
-                android:textStyle="bold" />
-        </FrameLayout>
-
-        <ScrollView
-            android:layout_width="match_parent"
-            android:layout_height="match_parent">
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="vertical"
-                android:paddingLeft="72dp"
+                android:paddingBottom="16dp"
+                android:paddingLeft="16dp"
                 android:paddingRight="16dp"
-                android:paddingTop="8dp"
-                android:paddingBottom="16dp">
+                android:paddingTop="8dp">
+
+                <TextView
+                    android:id="@+id/tv_details_title"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="bottom"
+                    android:textSize="@dimen/detail_movie_title_size"
+                    android:textStyle="bold" />
 
                 <TextView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:paddingTop="24dp"
                     android:text="@string/original_title"
-                    android:textSize="20sp"
+                    android:textSize="@dimen/detail_element_title_size"
                     android:textStyle="bold" />
 
                 <TextView
                     android:id="@+id/tv_details_original_title"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:textSize="16sp" />
+                    android:textSize="@dimen/detail_element_value_size" />
 
                 <TextView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:paddingTop="16dp"
                     android:text="@string/user_rating"
-                    android:textSize="20sp"
+                    android:textSize="@dimen/detail_element_title_size"
                     android:textStyle="bold" />
 
                 <TextView
                     android:id="@+id/tv_details_user_rating"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:textSize="16sp" />
+                    android:textSize="@dimen/detail_element_value_size" />
 
                 <TextView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:paddingTop="16dp"
                     android:text="@string/release_date"
-                    android:textSize="20sp"
+                    android:textSize="@dimen/detail_element_title_size"
                     android:textStyle="bold" />
 
                 <TextView
                     android:id="@+id/tv_details_release_date"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:textSize="16sp" />
+                    android:textSize="@dimen/detail_element_value_size" />
 
                 <TextView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:paddingTop="16dp"
                     android:text="@string/plot_synopsis"
-                    android:textSize="20sp"
+                    android:textSize="@dimen/detail_element_title_size"
                     android:textStyle="bold" />
 
                 <TextView
                     android:id="@+id/tv_details_overview"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:textSize="16sp" />
+                    android:textSize="@dimen/detail_element_value_size" />
             </LinearLayout>
-        </ScrollView>
+        </LinearLayout>
+    </ScrollView>
 
-    </LinearLayout>
+    <include layout="@layout/error_message_view" />
 
     <include layout="@layout/loading_indicator" />
-</LinearLayout>
+</merge>
