--- a/app/src/main/res/menu/main_menu.xml
+++ b/app/src/main/res/menu/main_menu.xml
@@ -4,11 +4,11 @@
     <item
         android:id="@+id/action_sort_most_popular"
         android:orderInCategory="1"
-        android:title="Sort by Most Popular"
+        android:title="@string/action_sort_by_most_popular"
         app:showAsAction="never" />
     <item
         android:id="@+id/action_sort_high_rating"
         android:orderInCategory="2"
-        android:title="Sort by High Rating"
+        android:title="@string/action_sort_by_high_rating"
         app:showAsAction="never" />
 </menu>
