--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -8,4 +8,20 @@
         <item name="colorAccent">@color/colorAccent</item>
     </style>
 
+    <style name="DetailsActionBarStyle" parent="@style/Widget.AppCompat.Light.ActionBar.Solid.Inverse">
+        <item name="elevation">0dp</item>
+        <item name="displayOptions">none</item>
+
+    </style>
+
+    <style name="DetailTheme" parent="AppTheme">
+        <item name="actionBarStyle">@style/DetailsActionBarStyle</item>
+    </style>
+
+    <style name="MovieDetailsContentLabel">
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:textSize">@dimen/detail_element_value_size</item>
+    </style>
+
 </resources>
