--- a/app/src/main/res/layout/activity_movie_detail.xml
+++ b/app/src/main/res/layout/activity_movie_detail.xml
@@ -1,138 +1,221 @@
 <?xml version="1.0" encoding="utf-8"?>
-<merge xmlns:android="http://schemas.android.com/apk/res/android"
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context="com.frusoft.movier.activity.MovieDetailActivity">
+    xmlns:tools="http://schemas.android.com/tools">
 
-    <ScrollView
-        android:id="@+id/ll_detail_wrapper"
+    <FrameLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:visibility="visible">
+        tools:context="com.frusoft.movier.activity.MovieDetailActivity">
 
-        <android.support.constraint.ConstraintLayout
+        <ScrollView
+            android:id="@+id/ll_detail_wrapper"
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            android:layout_height="match_parent"
+            android:visibility="visible">
 
             <android.support.constraint.ConstraintLayout
-                android:id="@+id/view"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="0dp"
-                android:layout_marginRight="0dp"
-                android:layout_marginTop="0dp"
-                android:background="@color/colorPrimary"
-                app:layout_constraintHorizontal_bias="0.47"
-                app:layout_constraintLeft_toLeftOf="parent"
-                app:layout_constraintRight_toRightOf="parent"
-                app:layout_constraintTop_toTopOf="parent">
+                android:layout_marginBottom="8dp">
+
+                <android.support.constraint.ConstraintLayout
+                    android:id="@+id/view"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:background="@color/colorPrimary"
+                    app:layout_constraintLeft_toLeftOf="parent"
+                    app:layout_constraintRight_toRightOf="parent"
+                    app:layout_constraintTop_toTopOf="parent">
+
+                    <TextView
+
+                        android:id="@+id/tv_details_title"
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_marginBottom="16dp"
+                        android:layout_marginEnd="16dp"
+                        android:layout_marginLeft="72dp"
+                        android:layout_marginRight="16dp"
+                        android:layout_marginStart="72dp"
+                        android:textColor="@color/white"
+                        android:textSize="30sp"
+                        android:textStyle="bold"
+                        app:layout_constraintBottom_toBottomOf="parent"
+                        app:layout_constraintLeft_toLeftOf="parent"
+                        app:layout_constraintRight_toRightOf="parent"
+                        tools:text="The Hunger Games: Mockinjay - Part 2" />
+
+                </android.support.constraint.ConstraintLayout>
+
+                <ImageView
+                    android:id="@+id/iv_details_preview_poster"
+                    android:layout_width="0dp"
+                    android:layout_height="200dp"
+                    android:layout_margin="8dp"
+                    android:contentDescription="@string/movie_poster_content_description"
+                    app:layout_constraintHorizontal_bias="0.0"
+                    app:layout_constraintLeft_toLeftOf="parent"
+                    app:layout_constraintRight_toLeftOf="@+id/guideline"
+                    app:layout_constraintTop_toBottomOf="@+id/view"
+                    tools:src="@drawable/movie_poster_placeholder" />
 
                 <TextView
+                    android:id="@+id/original_title_label_tv"
+                    style="@style/MovieDetailsContentTitleLabel"
+                    android:layout_marginLeft="8dp"
+                    android:layout_marginStart="8dp"
+                    android:layout_marginTop="0dp"
+                    android:text="@string/original_title"
+                    app:layout_constraintHorizontal_bias="0.0"
+                    app:layout_constraintLeft_toLeftOf="@+id/guideline"
+                    app:layout_constraintRight_toRightOf="parent"
+                    app:layout_constraintTop_toBottomOf="@+id/view" />
 
-                    android:id="@+id/tv_details_title"
-                    android:layout_width="match_parent"
+                <TextView
+                    android:id="@+id/tv_details_original_title"
+                    style="@style/MovieDetailsContentLabel"
+                    app:layout_constraintHorizontal_bias="0.0"
+                    app:layout_constraintLeft_toLeftOf="@+id/original_title_label_tv"
+                    app:layout_constraintRight_toRightOf="parent"
+                    app:layout_constraintTop_toBottomOf="@+id/original_title_label_tv"
+                    tools:text="The Hunger Games 5: Mockinjay" />
+
+                <TextView
+                    android:id="@+id/release_date_label_tv"
+                    style="@style/MovieDetailsContentTitleLabel"
+                    android:text="@string/release_date"
+
+                    app:layout_constraintHorizontal_bias="0.0"
+                    app:layout_constraintLeft_toLeftOf="@+id/tv_details_original_title"
+                    app:layout_constraintRight_toRightOf="parent"
+                    app:layout_constraintTop_toBottomOf="@+id/tv_details_original_title" />
+
+                <TextView
+                    android:id="@+id/tv_details_release_date"
+                    style="@style/MovieDetailsContentLabel"
+                    app:layout_constraintHorizontal_bias="0.0"
+                    app:layout_constraintLeft_toLeftOf="@+id/release_date_label_tv"
+                    app:layout_constraintRight_toRightOf="parent"
+                    app:layout_constraintTop_toBottomOf="@+id/release_date_label_tv"
+                    tools:text="2017" />
+
+
+                <TextView
+                    android:id="@+id/user_rating_label_tv"
+                    style="@style/MovieDetailsContentTitleLabel"
+                    android:text="@string/user_ratings"
+                    app:layout_constraintHorizontal_bias="0.0"
+                    app:layout_constraintLeft_toLeftOf="@+id/tv_details_release_date"
+                    app:layout_constraintRight_toRightOf="parent"
+                    app:layout_constraintTop_toBottomOf="@+id/tv_details_release_date" />
+
+                <TextView
+                    android:id="@+id/tv_details_user_rating"
+                    style="@style/MovieDetailsContentLabel"
+                    app:layout_constraintHorizontal_bias="0.0"
+                    app:layout_constraintLeft_toLeftOf="@+id/user_rating_label_tv"
+                    app:layout_constraintRight_toRightOf="parent"
+                    app:layout_constraintTop_toBottomOf="@+id/user_rating_label_tv"
+                    tools:text="8.1/10" />
+
+                <ImageView
+                    android:id="@+id/breakerLine"
+                    android:layout_width="0dp"
+                    android:layout_height="1dp"
+                    android:layout_marginEnd="8dp"
+                    android:layout_marginLeft="8dp"
+                    android:layout_marginRight="8dp"
+                    android:layout_marginStart="8dp"
+                    android:layout_marginTop="8dp"
+                    android:contentDescription="@string/break_line"
+                    app:layout_constraintHorizontal_bias="0.0"
+                    app:layout_constraintLeft_toLeftOf="parent"
+                    app:layout_constraintRight_toRightOf="parent"
+                    app:layout_constraintTop_toBottomOf="@+id/iv_details_preview_poster"
+                    app:srcCompat="@color/colorPrimary" />
+
+                <TextView
+                    android:id="@+id/tv_details_overview"
+                    android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:layout_marginBottom="16dp"
-                    android:layout_marginLeft="72dp"
-                    android:layout_marginRight="16dp"
-                    android:textColor="@color/white"
-                    android:textSize="30sp"
-                    android:textStyle="bold"
+                    android:layout_margin="8dp"
+                    app:layout_constraintLeft_toLeftOf="parent"
+                    app:layout_constraintRight_toRightOf="parent"
+                    app:layout_constraintTop_toBottomOf="@+id/breakerLine"
+                    tools:text="Caesar and his apes are forced into a deadly conflict with an army of humans led by a ruthless Colonel. After the apes suffer unimaginable losses, Caesar wrestles with his darker instincts and begins his own mythic quest to avenge his kind. As the journey finally brings them face to face, Caesar and the Colonel are pitted against each other in an epic battle that will determine the fate of both their species and the future of the planet." />
+
+
+                <TextView
+                    android:id="@+id/videos_title_label"
+                    style="@style/MovieDetailsContentTitleLabel"
+                    android:layout_margin="8dp"
+                    android:text="@string/videos"
+                    app:layout_constraintHorizontal_bias="0.0"
+                    app:layout_constraintLeft_toLeftOf="parent"
+                    app:layout_constraintRight_toRightOf="parent"
+                    app:layout_constraintTop_toBottomOf="@+id/tv_details_overview" />
+
+                <android.support.v7.widget.RecyclerView
+                    android:id="@+id/movie_details_videos_rv"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="8dp"
+                    android:layout_marginStart="8dp"
+                    app:layout_constraintLeft_toLeftOf="parent"
+                    app:layout_constraintRight_toRightOf="parent"
+                    app:layout_constraintTop_toBottomOf="@+id/videos_title_label" />
+
+                <TextView
+                    android:id="@+id/reviews_title_label"
+                    style="@style/MovieDetailsContentTitleLabel"
+                    android:layout_margin="8dp"
+                    android:text="@string/reviews"
+                    app:layout_constraintHorizontal_bias="0.0"
+                    app:layout_constraintLeft_toLeftOf="parent"
+                    app:layout_constraintRight_toRightOf="parent"
+                    app:layout_constraintTop_toBottomOf="@+id/movie_details_videos_rv" />
+
+                <android.support.v7.widget.RecyclerView
+                    android:id="@+id/movie_details_review_rv"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_marginEnd="8dp"
+                    android:layout_marginLeft="8dp"
+                    android:layout_marginRight="8dp"
+                    android:layout_marginStart="8dp"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintLeft_toLeftOf="parent"
                     app:layout_constraintRight_toRightOf="parent"
-                    tools:text="The Hunger Games: Mockinjay - Part 2" />
+                    app:layout_constraintTop_toBottomOf="@+id/reviews_title_label" />
+
+                <android.support.constraint.Guideline
+                    android:id="@+id/guideline"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical"
+                    app:layout_constraintGuide_percent="0.4" />
+
             </android.support.constraint.ConstraintLayout>
 
-            <ImageView
-                android:id="@+id/iv_details_preview_poster"
-                android:layout_width="0dp"
-                android:layout_height="200dp"
-                android:layout_marginLeft="8dp"
-                android:layout_marginRight="8dp"
-                android:background="@drawable/movie_poster_placeholder"
-                android:layout_marginTop="8dp"
-                app:layout_constraintHorizontal_bias="0.0"
-                app:layout_constraintLeft_toLeftOf="parent"
-                app:layout_constraintRight_toLeftOf="@+id/guideline"
-                app:layout_constraintTop_toBottomOf="@id/view"
-                tools:layout_editor_absoluteY="173dp" />
+        </ScrollView>
 
-            <android.support.constraint.Guideline
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:id="@+id/guideline"
-                android:orientation="vertical"
-                app:layout_constraintGuide_percent="0.5" />
+        <android.support.design.widget.FloatingActionButton
+            android:id="@+id/fab_favourite_movie_button"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="bottom|end"
+            android:layout_margin="16dp"
+            android:src="@drawable/ic_star_border_black_24dp"
+            app:fabSize="auto" />
 
-            <TextView
-                android:id="@+id/tv_details_release_date"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="0dp"
-                android:layout_marginTop="8dp"
-                android:textSize="18sp"
-                android:textStyle="bold"
-                app:layout_constraintLeft_toLeftOf="@+id/tv_details_original_title"
-                app:layout_constraintTop_toBottomOf="@+id/tv_details_original_title"
-                tools:text="2017" />
+        <include
+            layout="@layout/error_message_view"
+            android:visibility="gone" />
 
-            <TextView
-                android:id="@+id/tv_details_user_rating"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="0dp"
-                android:layout_marginTop="8dp"
-                android:textSize="18sp"
-                app:layout_constraintLeft_toLeftOf="@+id/tv_details_release_date"
-                app:layout_constraintTop_toBottomOf="@+id/tv_details_release_date"
-                tools:text="8.1/10" />
+        <include
+            layout="@layout/loading_indicator"
+            android:visibility="gone" />
 
-            <TextView
-                android:id="@+id/tv_details_original_title"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="16dp"
-                android:layout_marginRight="8dp"
-                android:layout_marginTop="16dp"
-                android:textSize="14sp"
-                app:layout_constraintLeft_toLeftOf="@id/guideline"
-                app:layout_constraintRight_toRightOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/view"
-                tools:text="The Hunger Games 5: Mockinjay" />
-
-            <TextView
-                android:id="@+id/tv_details_overview"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="16dp"
-                android:layout_marginRight="16dp"
-                android:layout_marginTop="16dp"
-                app:layout_constraintTop_toBottomOf="@+id/breakerLine"
-                tools:text="Caesar and his apes are forced into a deadly conflict with an army of humans led by a ruthless Colonel. After the apes suffer unimaginable losses, Caesar wrestles with his darker instincts and begins his own mythic quest to avenge his kind. As the journey finally brings them face to face, Caesar and the Colonel are pitted against each other in an epic battle that will determine the fate of both their species and the future of the planet."
-                app:layout_constraintLeft_toLeftOf="parent"
-                app:layout_constraintRight_toRightOf="parent" />
-
-            <ImageView
-                android:id="@+id/breakerLine"
-                android:layout_width="0dp"
-                android:layout_height="1dp"
-                android:layout_marginLeft="8dp"
-                android:layout_marginRight="8dp"
-                app:layout_constraintLeft_toLeftOf="parent"
-                app:layout_constraintRight_toRightOf="parent"
-                app:srcCompat="@color/colorPrimary"
-                app:layout_constraintHorizontal_bias="0.0"
-                android:layout_marginTop="8dp"
-                app:layout_constraintTop_toBottomOf="@+id/iv_details_preview_poster" />
-
-        </android.support.constraint.ConstraintLayout>
-
-    </ScrollView>
-
-    <include layout="@layout/error_message_view" />
-
-    <include layout="@layout/loading_indicator" />
-</merge>
+    </FrameLayout>
+</layout>
