--- a/app/src/main/res/menu/main_menu.xml
+++ b/app/src/main/res/menu/main_menu.xml
@@ -11,4 +11,9 @@
         android:orderInCategory="2"
         android:title="@string/action_sort_by_high_rating"
         app:showAsAction="never" />
+    <item
+        android:id="@+id/action_sort_favorite"
+        android:orderInCategory="3"
+        android:title="@string/action_sort_by_favorite"
+        app:showAsAction="never" />
 </menu>
