--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -19,9 +19,18 @@
     </style>
 
     <style name="MovieDetailsContentLabel">
+        <item name="android:layout_marginRight">8dp</item>
         <item name="android:layout_width">wrap_content</item>
         <item name="android:layout_height">wrap_content</item>
         <item name="android:textSize">@dimen/detail_element_value_size</item>
+        <item name="android:layout_marginLeft">0dp</item>
+        <item name="android:layout_marginTop">0dp</item>
+
     </style>
 
+    <style name="MovieDetailsContentTitleLabel" parent="MovieDetailsContentLabel">
+        <item name="android:textSize">@dimen/detail_element_title_size</item>
+        <item name="android:layout_marginTop">8dp</item>
+        <item name="android:textStyle">bold</item>
+    </style>
 </resources>
